--- a/Web/src/app/admin/banner/banner.component.html
+++ b/Web/src/app/admin/banner/banner.component.html
@@ -51,7 +51,7 @@
         <label for="datepublished">Date</label>
         <div class="input-group">
           <input type="text" id="datepublished" class="form-control" style="text-align: left" placeholder="datepublished" name="datepublished"
-          [(ngModel)]="datepublished" disabled>
+          [(ngModel)]="datepublished" datetime="yyyy-MM-dd" disabled>
         </div>
       </div>
       <div class="form-group">
