--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -104,6 +104,9 @@
                 <li class="nav-item">
                     <a class="nav-link" data-aos="fade-left" data-aos-duration="600" href="/contactus">Contact Us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-aos="fade-left" data-aos-duration="600" href="/terms">Terms</a>
+                </li>
 			    <li class="nav-item" [hidden]="!isAdmin">
                     <a class="nav-link" data-aos="fade-left" data-aos-duration="800" href="/dashboard">Dashboard</a>
                 </li>
